--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/Traow/learnwebpackmm21#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "twig-loader": "^0.5.5",
     "vue-router": "^4.1.5",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "ws": "^8.10.0"
   },
   "devDependencies": {
     "bulma": "^0.9.4",
